@@ -1,10 +1,10 @@
 {
-  "timestamp" : "2022-03-23T01:22:19Z",
-  "count" : 21,
+  "timestamp" : "2022-04-05T08:21:43Z",
+  "count" : 2,
   "count_minmax" : [ 0, 21 ],
   "count_prev_day_inc" : 45,
   "count_prev_day_dec" : 0,
-  "uniques" : 8,
+  "uniques" : 1,
   "uniques_minmax" : [ 0, 8 ],
   "uniques_prev_day_inc" : 11,
   "uniques_prev_day_dec" : 0
