@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-04-05T01:17:16Z",
+  "timestamp" : "2022-04-05T08:21:43Z",
   "count_outdated" : 1133,
   "uniques_outdated" : 292,
-  "count" : 1741,
-  "uniques" : 320,
+  "count" : 1722,
+  "uniques" : 313,
   "clones" : [
     {
       "timestamp": "2022-03-22T00:00:00Z",
-      "count": 21,
+      "count": 2,
       "count_minmax": [ 0, 21 ],
-      "uniques": 8,
+      "uniques": 1,
       "uniques_minmax": [ 0, 8 ]
     },
     {
