@@ -1,11 +1,11 @@
 {
-  "count": 608,
-  "uniques": 17,
+  "count": 589,
+  "uniques": 15,
   "clones": [
     {
       "timestamp": "2022-03-22T00:00:00Z",
-      "count": 21,
-      "uniques": 8
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-03-23T00:00:00Z",
